change display name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.bckworks.ecsrx.unity",
   "version": "2.1.1",
-  "displayName": "EcsRx Unity",
+  "displayName": "BCKWorks EcsRx Unity",
   "description": "A simple framework for unity using the ECS paradigm but with unirx for fully reactive systems.",
   "unity": "2019.3",
   "dependencies": {
