--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.bckworks.ecsrx",
   "version": "3.11.0",
-  "displayName": "EcsRx",
+  "displayName": "BCKWorks EcsRx",
   "description": "A reactive take on the ECS pattern for .net game developers",
   "unity": "2019.3",
   "license": "MIT",
