fixed asmdef include only editor platform

--- a/Editor/EcsRx.Unity.Editor.asmdef
+++ b/Editor/EcsRx.Unity.Editor.asmdef
@@ -5,7 +5,9 @@
         "GUID:3cc535e08f4df0e42aed273951c09fbe",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
