update package name

--- a/Runtime/bckworks.ext.ecsrx.asmdef
+++ b/Runtime/bckworks.ext.ecsrx.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "EcsRx",
+    "name": "bckworks.ext.ecsrx",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
