--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.bckworks.ext.ecsrx",
-  "displayName": "EcsRx",
+  "displayName": "BCKWorks External EcsRx",
   "description": "A reactive take on the ECS pattern for .net game developers",
   "version": "1.0.0",
   "unity": "2019.4",
