change package name

--- a/Runtime/bckworks.extern.ecsrx.asmdef
+++ b/Runtime/bckworks.extern.ecsrx.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "bckworks.ext.ecsrx",
+    "name": "bckworks.extern.ecsrx",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
