--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,16 +3,16 @@ on:
   
   push:
     branches:
-      - master # Change this to your default branch
+      - upm # Change this to your default branch
 jobs:
   npm-publish:
     name: npm-publish
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@master
+      uses: actions/checkout@upm
     - name: Set up Node.js
-      uses: actions/setup-node@master
+      uses: actions/setup-node@upm
       with:
         node-version: 10.0.0
     - name: Publish if version has been updated
