--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@upm
+      uses: actions/checkout@master
     - name: Set up Node.js
-      uses: actions/setup-node@upm
+      uses: actions/setup-node@master
       with:
         node-version: 10.0.0
     - name: Publish if version has been updated
