--- a/Runtime/intervr.unity.extern.ecsrx.asmdef
+++ b/Runtime/intervr.unity.extern.ecsrx.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "bckworks.extern.ecsrx.unity",
+    "name": "intervr.unity.extern.ecsrx",
     "references": [
         "GUID:0715616b45e7840468dd5ab65e52f66d",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
