--- a/Runtime/intervr.ts.ecsrx.unity.asmdef
+++ b/Runtime/intervr.ts.ecsrx.unity.asmdef
@@ -1,13 +1,11 @@
 {
-    "name": "intervr.unity.extern.ecsrx.editor",
+    "name": "intervr.ts.ecsrx.unity",
     "references": [
         "GUID:0715616b45e7840468dd5ab65e52f66d",
-        "GUID:3cc535e08f4df0e42aed273951c09fbe",
-        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
