--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.intervr.ts.ecsrx.unity",
-  "displayName": "iNTERVR Tech Stack EcsRx Unity",
+  "displayName": "iNTERVR Tech Stack EcsRx for Unity",
   "description": "A simple framework for unity using the ECS paradigm but with unirx for fully reactive systems.",
   "version": "1.7.1",
   "unity": "2020.1",
